bugfix for localhost

--- a/about.html
+++ b/about.html
@@ -8,6 +8,8 @@
         <link rel="stylesheet" type="text/css" href="css/reset.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat|Quicksand|Staatliches|Play">
         <link rel="stylesheet" type="text/css" href="css/about.css">
+        <link rel="stylesheet" type="text/css" href="css/default.css">
+        <link rel="stylesheet" type="text/css" href="css/navbar.css">
         <link rel="stylesheet" type="text/css" href="css/about-small.css" media="screen and (max-width: 898px)">
     </head>
     <body>
