--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,8 @@
         <link rel="stylesheet" type="text/css" href="css/reset.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat|Quicksand|Staatliches|Play">
         <link rel="stylesheet" type="text/css" href="css/blog.css">
+        <link rel="stylesheet" type="text/css" href="css/default.css">
+        <link rel="stylesheet" type="text/css" href="css/navbar.css">
     </head>
     <body>
         <main class="main">
