--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
                         <li><a href="home.html">Home</a></li>
                         <li><a href="about.html">About Me</a></li>
                         <li><a href="projects.html">Projects</a></li>
-                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="blog.php">Blog</a></li>
                         <li><a href="contacts.html">Contact</a></li>
                     </ul>
                 </nav>
