script now works in head

--- a/blogform.html
+++ b/blogform.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="css/blogform.css">
         <link rel="stylesheet" type="text/css" href="css/default.css">
         <link rel="stylesheet" type="text/css" href="css/navbar.css">
-        <script src="js/validate_form.js"></script>
+        <script src="js/validate_form.js" defer></script>
     </head>
     <body>
         <main class="container">
